--- a/BingGoogleSearch/search.html
+++ b/BingGoogleSearch/search.html
@@ -38,6 +38,8 @@
         margin: 0;
         display: pointer;
         cursor: pointer;
+        margin-right: 20px;
+        margin-top: 5px;
       }
     </style>
   </head>
